Closed
Bug 980275
Opened 12 years ago
Closed 11 years ago
Merge DOMFileRequest and FileRequest
Categories
(Core :: DOM: Core & HTML, defect)
Core
DOM: Core & HTML
Tracking
()
RESOLVED
FIXED
mozilla30
People
(Reporter: janv, Assigned: janv)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
16.15 KB,
patch
|
bent.mozilla
:
review+
|
Details | Diff | Splinter Review |
No description provided.
Assignee | ||
Comment 1•12 years ago
|
||
another cleanup before we switch to PBackground
Assignee: nobody → Jan.Varga
Status: NEW → ASSIGNED
Attachment #8386734 -
Flags: review?(bent.mozilla)
Comment on attachment 8386734 [details] [diff] [review]
patch
Review of attachment 8386734 [details] [diff] [review]:
-----------------------------------------------------------------
::: dom/filehandle/FileHandle.cpp
@@ +164,5 @@
> return nullptr;
> }
>
> + nsRefPtr<FileRequest> request =
> + FileRequest::Create(GetOwner(), lockedFile, true);
Nit: s/true//* aWrapAsDOMRequest */ true/
::: dom/filehandle/FileRequest.cpp
@@ +115,5 @@
> +
> +nsIDOMLockedFile*
> +FileRequest::GetLockedFile() const
> +{
> + NS_ASSERTION(NS_IsMainThread(), "Wrong thread!");
Nit: MOZ_ASSERT for new stuff
::: dom/filehandle/LockedFile.cpp
@@ +424,4 @@
> LockedFile::GenerateFileRequest()
> {
> NS_ASSERTION(NS_IsMainThread(), "Wrong thread!");
> + return FileRequest::Create(GetOwner(), this, false);
Nit: s/false//* aWrapAsDOMRequest */ false/
::: dom/filehandle/LockedFile.h
@@ +102,1 @@
> GenerateFileRequest();
Nit: Remove 'inline'
Attachment #8386734 -
Flags: review?(bent.mozilla) → review+
Assignee | ||
Comment 3•11 years ago
|
||
Assignee | ||
Comment 4•11 years ago
|
||
Had to fix a bustage:
https://hg.mozilla.org/integration/mozilla-inbound/rev/a83ecf923dec
Comment 5•11 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/db46457d0731
https://hg.mozilla.org/mozilla-central/rev/a83ecf923dec
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla30
Assignee | ||
Updated•11 years ago
|
Flags: in-testsuite+
Updated•6 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•