Bug 980275 - Merge DOMFileRequest and FileRequest. r=bent